--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <a href="#" id="edit" class="box"><span>Edit</span></a>
         <a href="#" id="clean" class="box"><span>Clean</span></a>
       </div>
-      <div class = "display" style = "width = 100%">
+      <div class = "display" style = "width:100%">
         <div id="show">
         </div> 
         <div>end</div>
