--- a/public/upload.html
+++ b/public/upload.html
@@ -72,5 +72,8 @@
           <button id="a_submit" class="btn btn-primary">Submit</button>
         </div>
     </div> 
+    <div>
+      <button id="weathershow">show weather</button>
+    </div>
   </body>
 </html>
