--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../src/index.css?v=13">
+    <link rel="stylesheet" type="text/css" href="../src/index.css?v=16">
     <script type="module" src="../src/index.js?v=21">
       window.addEventListener("DOMContentLoaded", event=>{
         show();
@@ -27,6 +27,7 @@
         <a href="#" id="clean" class="box"><span>Clean</span></a>
       </div>
       <div class = "display" style = "width:100%">
+        <h1 class="diary-title"> personal diary</h1>
         <div id="show">
         </div> 
         <div>end</div>
