--- a/public/upload.html
+++ b/public/upload.html
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div>
-          <button id="a_cancel" onclick="window.location.href='/term/public/index.html'" class="btn btn-primary">Cancel</button>
+          <button id="a_cancel" onclick="window.location.href='/public/index.html'" class="btn btn-primary">Cancel</button>
           <button id="a_submit" class="btn btn-primary">Submit</button>
         </div>
     </div> 
