--- a/public/upload.html
+++ b/public/upload.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/assets/css/docs.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../src/upload.css?v=11">
+    <link rel="stylesheet" type="text/css" href="../src/upload.css?v=13">
     <script type="module">
       import {bind} from "../src/upload.js?v=17";
       window.addEventListener("DOMContentLoaded", (event) => {
@@ -22,7 +22,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="up">
-        <div id="inputc" contenteditable="true"></div>
+        <div id="inputc" class="inputcontent" contenteditable="true"></div>
         <div>          
             <button id="a_loc"  class="btn btn-outline-primary"><i class="bi bi-geo-alt"></i>location</button>
             <button id="a_emoji"  class="btn btn-outline-primary"><i class="bi bi-emoji-smile"></i>emoji</button>
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div>
-          <button id="a_cancel" onclick="window.location.href='/term/public/index.html'" class="btn btn-primary">Cancel</button>
+          <button id="a_cancel" onclick="window.location.href='./index.html'" class="btn btn-primary">Cancel</button>
           <button id="a_submit" class="btn btn-primary">Submit</button>
         </div>
     </div> 
